--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 
 <body>
     <header>
-        <h1><a href="/"><img src="img/template-logo01.png" alt="ロゴ"></a></h1>
+        <div class="inner">
+            <h1><a href="/"><img src="img/template-logo01.png" alt="ロゴ"></a></h1>
 
-        <h2>お電話でのご予約はこちら</h2>
-        <p>03-1234-5678</p>
+            <h2>お電話でのご予約はこちら</h2>
+            <p>03-1234-5678</p>
 
-        <a href="/">WEB予約</a>
+            <a href="/">WEB予約</a>
+        </div>
     </header>
     <nav>
         <ul>
@@ -30,7 +32,7 @@
         </ul>
     </nav>
     <div>
-        <div>
+        <div class="inner">
             <h2>Hello, world!</h2>
             <p>
                 This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured
