--- a/index.html
+++ b/index.html
@@ -31,17 +31,22 @@
             <li><a href="#">MENU</a></li>
         </ul>
     </nav>
-    <div>
+    <div class="key-visual">
         <div class="inner">
-            <h2>Hello, world!</h2>
-            <p>
-                This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured
-                content
-                or
-                information.
+            <div class="key-visual-content">
+                <h2>Hello, world!</h2>
+                <p>
+                    This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
+                    featured
+                    content
+                    or
+                    information.
+                </p>
                 <hr>
-                It uses utility classes for typography and spacing to space content out within the larger container.
-            </p>
+                <p class="notice">
+                    It uses utility classes for typography and spacing to space content out within the larger container.
+                </p>
+            </div>
         </div>
     </div>
 </body>
