--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
     <header>
         <div class="inner">
             <h1><a href="/"><img src="img/template-logo01.png" alt="ロゴ"></a></h1>
+            <ul>
+                <li>
+                    <h2>お電話でのご予約はこちら</h2>
+                    <p>03-1234-5678</p>
+                </li>
 
-            <h2>お電話でのご予約はこちら</h2>
-            <p>03-1234-5678</p>
-
-            <a href="/">WEB予約</a>
+                <li><a href="/">WEB予約</a></li>
+            </ul>
         </div>
     </header>
     <nav>
