--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             <div class="key-visual-content">
                 <h2>Hello, world!</h2>
                 <p>
-                    This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
+                    This is a simple hero unit, a simple jumbotron-style<br>
+                    component for calling extra attention to
                     featured
                     content
                     or
